[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/placeholders/square-rounded-512.png" type="Texture" id=1]
[ext_resource path="res://assets/placeholders/circle-512.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/baseStats.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/widgets/Basecard.gd" type="Script" id=4]
[ext_resource path="res://assets/placeholders/skull.png" type="Texture" id=5]
[ext_resource path="res://assets/placeholders/square-128.png" type="Texture" id=6]
[ext_resource path="res://scenes/widgets/glow.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/Basecard.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/fonts/Basedesc.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/fonts/BasedescScaled.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/fonts/baseStatsScaled.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/fonts/BasecardScaled.tres" type="DynamicFont" id=12]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 260.417, 256.944 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes/scalerSize/glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spriteNodes:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("textNodes:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("spriteNodes/textNodes:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "focus"
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 0.8, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriteNodes/scalerSize/glow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "scaleToPlay"
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("textNodes:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spriteNodes/textNodes:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("spriteNodes/scalerSize/glow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "simpleFocus"
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes/scalerSize/glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriteNodes:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1.3, 1.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spriteNodes/textNodes:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("textNodes:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "simpleUnfocus"
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes/scalerSize/glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriteNodes:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("textNodes:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("spriteNodes/textNodes:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "unfocus"
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes/scalerSize/glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriteNodes:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 0.6, 0.9 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes/scalerSize/cardBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "flipToBack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spriteNodes/scalerSize/cardBack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=21]
resource_name = "flipToFront"
tracks/0/type = "value"
tracks/0/path = NodePath("spriteNodes/scalerSize/cardBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.005, 1 ), Vector2( 1, 1 ) ]
}

[node name="Basecard" type="Node2D"]
position = Vector2( 1, 1 )
script = ExtResource( 4 )

[node name="spriteNodes" type="Node2D" parent="."]

[node name="scalerSize" type="Node2D" parent="spriteNodes"]
scale = Vector2( 0.4, 0.6 )

[node name="cardcollision" type="Area2D" parent="spriteNodes/scalerSize"]
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="spriteNodes/scalerSize/cardcollision"]
position = Vector2( 0.416667, -0.83335 )
z_index = 1
shape = SubResource( 3 )

[node name="card" type="Sprite" parent="spriteNodes/scalerSize"]
self_modulate = Color( 0.85098, 0.85098, 0.85098, 1 )
texture = ExtResource( 1 )

[node name="imageRef" type="Sprite" parent="spriteNodes/scalerSize"]
modulate = Color( 0.576471, 0.541176, 0.541176, 1 )
position = Vector2( 0, -80 )
scale = Vector2( 3.6, 2 )
texture = ExtResource( 6 )

[node name="energySprite" type="Sprite" parent="spriteNodes/scalerSize"]
self_modulate = Color( 0.160784, 0.643137, 0.854902, 1 )
position = Vector2( -180, -210 )
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 2 )

[node name="cardBack" type="Sprite" parent="spriteNodes/scalerSize"]
visible = false
self_modulate = Color( 0.0784314, 0.0509804, 0.0509804, 1 )
z_index = 2
texture = ExtResource( 1 )

[node name="Design" type="Sprite" parent="spriteNodes/scalerSize/cardBack"]
scale = Vector2( 1.4, 1 )
texture = ExtResource( 5 )

[node name="glow" type="Sprite" parent="spriteNodes/scalerSize"]
visible = false
self_modulate = Color( 0.52, 0.52, 1.5, 1 )
scale = Vector2( 1.03, 1.03 )
z_index = -1
texture = ExtResource( 1 )
script = ExtResource( 7 )

[node name="textNodes" type="Node2D" parent="spriteNodes"]

[node name="Name" type="RichTextLabel" parent="spriteNodes/textNodes"]
margin_left = -46.0
margin_top = -152.0
margin_right = 72.0
margin_bottom = -127.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Name[/center]"
text = "Name"

[node name="Type" type="RichTextLabel" parent="spriteNodes/textNodes"]
margin_left = -66.0
margin_top = 31.0
margin_right = 68.0
margin_bottom = 55.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Type[/center]"
text = "Type"

[node name="Desc" type="RichTextLabel" parent="spriteNodes/textNodes"]
margin_left = -90.0
margin_top = 60.0
margin_right = 91.0
margin_bottom = 141.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Description here.[/center]"
text = "Description here."

[node name="energyCost" type="RichTextLabel" parent="spriteNodes/textNodes"]
margin_left = -86.0
margin_top = -144.0
margin_right = -56.0
margin_bottom = -105.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="textNodes" type="Node2D" parent="."]
visible = false

[node name="Name" type="RichTextLabel" parent="textNodes"]
margin_left = -82.0
margin_top = -198.0
margin_right = 115.0
margin_bottom = -162.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]Name[/center]"
text = "Name"

[node name="Type" type="RichTextLabel" parent="textNodes"]
margin_left = -109.0
margin_top = 39.0
margin_right = 112.0
margin_bottom = 75.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]Type[/center]"
text = "Type"

[node name="bigDesc" type="RichTextLabel" parent="textNodes"]
margin_left = -118.0
margin_top = 77.0
margin_right = 117.0
margin_bottom = 178.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Description here.[/center]"
text = "Description here."

[node name="energyCost" type="RichTextLabel" parent="textNodes"]
margin_left = -110.0
margin_top = -188.0
margin_right = -76.0
margin_bottom = -139.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="cardTween" type="Tween" parent="."]

[node name="cardfocuser" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/focus = SubResource( 9 )
anims/scaleToPlay = SubResource( 12 )
anims/simpleFocus = SubResource( 17 )
anims/simpleUnfocus = SubResource( 18 )
anims/unfocus = SubResource( 10 )

[node name="cardflipper" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 19 )
anims/flipToBack = SubResource( 20 )
anims/flipToFront = SubResource( 21 )

[connection signal="input_event" from="spriteNodes/scalerSize/cardcollision" to="." method="_on_cardcollision_input_event"]
[connection signal="mouse_entered" from="spriteNodes/scalerSize/cardcollision" to="." method="_on_cardcollision_mouse_entered"]
[connection signal="mouse_exited" from="spriteNodes/scalerSize/cardcollision" to="." method="_on_cardcollision_mouse_exited"]
[connection signal="tween_all_completed" from="cardTween" to="." method="_on_cardTween_tween_all_completed"]
[connection signal="tween_started" from="cardTween" to="." method="_on_cardTween_tween_started"]
[connection signal="animation_finished" from="cardfocuser" to="." method="_on_cardfocuser_animation_finished"]
[connection signal="animation_started" from="cardfocuser" to="." method="_on_cardfocuser_animation_started"]
